# openai-helper

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: index.html
docs/openai_helper/: config.html  context.html  index.html  main.html  version.html
docs/openai_helper/ui/: app.html  index.html  main_frame.html
openai_helper/: config.py  context.py  main.py  version.py
openai_helper/ui/: app.py
